# pytrist

./: .buildinfo  .gitignore  CLAUDE.md  LICENSE  README.md  genindex.html  index.html  pyproject.toml  searchindex.js  trist.py
.doctrees/: api.doctree  index.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/pytrist/: fields.html  history.html  moments.html  simulation.html  spectra.html
_sources/: api.rst.txt  index.rst.txt
docs/: conf.py
docs/_build/html/: api.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: api.doctree  index.doctree
docs/_build/html/_modules/pytrist/: energy.html  field_moments.html  params.html  particles.html  units.html
examples/: 02_plot_fields.py  03_energy_history.py  04_particle_phase_space.py  06_unit_conversion.py
examples/notebooks/: 01_getting_started.ipynb  02_unit_conversion.ipynb  03_energy_analysis.ipynb
examples/scripts/: 01_inspect_simulation.py  05_energy_spectra.py  07_field_moments.py  08_energy_flux.py
pytrist/: __init__.py  energy.py  field_moments.py  fields.py  history.py  moments.py  params.py  particles.py  simulation.py  spectra.py  units.py
scripts/: field_overview.py
tests/: test_units.py
